kiwidict 0.095 2012-??-??

kiwidict 0.094 2012-??-??

- Added x-mark button - to delete all text in the input field.



kiwidict 0.093 2012-06-05

- Fixed bug, now you can select "All languages" in dropdown menu.
- Corrected cropped logo of sweet kiwi :)

kiwidict 0.092 2012-06-02

- Disabled "app debugging" :)

kiwidict 0.091 2012-06-01

- First version. 
- It is based on the Russian Wiktionary dump, as of May 21, 2011.
- There are entries in 423 languages.
- Added "www" link. It is a hyperlink to the corresponding article in the Wiktionary.
- It was found by one user, that if you rotate screen, then the program will be restarted. Undocumented feature :(

kiwidict 0.09 2011-10-12
  
  Added (from user's point of view):

    Added the beautiful icon of magnet. Thanks to commons.wikimedia.org!
    Added line which separates the game (centre of the screen) and results at the bottom of the screen.

  Added (from programmer's point of view)
    Nop